# NL-to-SQL-convertion

./: .env  .env.example  .gitignore  INSTALL.md  Makefile  README.md  UV_SETUP_GUIDE.md  pyproject.toml  quick-start.bat  quick-start.sh  requirements.txt  setup_uv.ps1  setup_uv.sh  uv.toml
code/: .env.example  INSTALL.md  Makefile  UV_SETUP_GUIDE.md  pyproject.toml  quick-start.bat  quick-start.sh  requirements.txt  setup_uv.ps1  setup_uv.sh  uv.toml
code/src/: app.py  main.py  pytest.ini
code/src/Agent/: __init__.py  gemini_agent.py  sql_validator.py
code/src/Documents/: DOCUMENTATION_INDEX.md  DOCUMENTATION_QUALITY_REVIEW.md  INLINE_COMMENTS_DOCUMENTATION.md  README.md  SETUP_INSTRUCTIONS.md  USE_CASES_DOCUMENTATION.md
code/src/UI/: __init__.py  chat.py  components.py  styles.py
code/src/data/: database_manager.py
code/src/tests/: README.md  TEST_COVERAGE_REPORT.md  __init__.py  conftest.py  requirements_test.txt  run_tests.py
